# skoll

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ejemplo_vulnerable.py  install_android.sh  proyecto_entero.txt  pyproject.toml  requirements.txt  setup.sh  start.sh
.github/workflows/: ci.yml
auditor_ai/: client.py  config.py  main.py  scanner.py  utils.py  verifier.py  web_server.py
auditor_ai/static/: app.js  index.html
docs/: app.js  index.html  manifest.json  service-worker.js  style.css
static/: app.js  index.html  style.css
tests/: __init__.py  test_cli.py  test_config.py  test_scanner.py  test_utils.py  test_verifier.py  test_web_server.py
