[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditor-ai"
version = "0.1.0"
description = "Asistente CLI de seguridad y auditoría de código inspirado en RAPTOR usando Google Gemini"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
auditor-ai = "auditor_ai.main:app"

[tool.ruff]
target-version = "py39"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"build/**" = ["ALL"]
"auditor_ai/config.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["auditor_ai*"]
